--- a/interno/ait.html
+++ b/interno/ait.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="top-header-content">
                 <div class="logo-governo">
-                    <a href="../index.html" class="gov-logo-link">
+                    <a href="painel.html" class="gov-logo-link">
                         <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
                     </a>
                     <span class="gov-divider" aria-hidden="true"></span>
@@ -157,15 +157,15 @@
                         </header>
                         <div class="bou-card-body">
                             <div class="bou-grid">
-                                <div class="bou-grid-span"><h4 class="bou-section-title">Dados da Autuação</h4></div>
+                                <div class="bou-grid-span"><h4 class="bou-section-title">Dados da Autua&ccedil;&atilde;o</h4></div>
 
                                 <div>
-                                    <label for="numeroAit">Número do AIT</label>
+                                    <label for="numeroAit">N&uacute;mero do AIT</label>
                                     <input id="numeroAit" type="text" placeholder="xxx/2026">
                                 </div>
                                 <div>
-                                    <label for="policial">Policial responsável</label>
-                                    <input id="policial" type="text" placeholder="Automático pelo perfil logado" readonly>
+                                    <label for="policial">Policial respons&aacute;vel</label>
+                                    <input id="policial" type="text" placeholder="Autom&aacute;tico pelo perfil logado" readonly>
                                 </div>
 
                                 <div class="bou-grid-span"><div class="bou-section-divider"></div></div>
@@ -181,34 +181,34 @@
                                 </div>
 
                                 <div class="bou-grid-span"><div class="bou-section-divider"></div></div>
-                                <div class="bou-grid-span"><h4 class="bou-section-title">Infração e Veículo</h4></div>
+                                <div class="bou-grid-span"><h4 class="bou-section-title">Infra&ccedil;&atilde;o e Ve&iacute;culo</h4></div>
 
                                 <div>
-                                    <label for="infracao">Infrações cometidas</label>
-                                    <input id="infracao" type="text" placeholder="Descrição da infração">
+                                    <label for="infracao">Infra&ccedil;&otilde;es cometidas</label>
+                                    <input id="infracao" type="text" placeholder="Descri&ccedil;&atilde;o da infra&ccedil;&atilde;o">
                                 </div>
                                 <div>
                                     <label for="valorMulta">Valor da multa em R$</label>
                                     <input id="valorMulta" type="text" placeholder="0,00">
                                 </div>
                                 <div>
-                                    <label for="apreensao">Houve apreensão do veículo?</label>
+                                    <label for="apreensao">Houve apreens&atilde;o do ve&iacute;culo?</label>
                                     <select id="apreensao">
                                         <option value="">Selecionar...</option>
                                         <option value="Sim">Sim</option>
-                                        <option value="Não">Não</option>
+                                        <option value="N&atilde;o">N&atilde;o</option>
                                     </select>
                                 </div>
                                 <div>
-                                    <label for="datahora">Data e horário</label>
-                                    <input id="datahora" type="text" placeholder="Dia/Mês/Ano e horário">
+                                    <label for="datahora">Data e hor&aacute;rio</label>
+                                    <input id="datahora" type="text" placeholder="Dia/M&ecirc;s/Ano e hor&aacute;rio">
                                 </div>
                                 <div>
-                                    <label for="local">Local de Autuação</label>
-                                    <input id="local" type="text" placeholder="Local da autuação">
+                                    <label for="local">Local de Autua&ccedil;&atilde;o</label>
+                                    <input id="local" type="text" placeholder="Local da autua&ccedil;&atilde;o">
                                 </div>
                                 <div>
-                                    <label for="marcaModelo">Marca e modelo do veículo</label>
+                                    <label for="marcaModelo">Marca e modelo do ve&iacute;culo</label>
                                     <input id="marcaModelo" type="text" placeholder="Marca e modelo">
                                 </div>
                                 <div>
@@ -262,3 +262,4 @@
     <script src="ait.js" defer></script>
 </body>
 </html>
+
