--- a/interno/aprovacoes.html
+++ b/interno/aprovacoes.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="top-header-content">
                 <div class="logo-governo">
-                    <a href="../index.html" class="gov-logo-link">
+                    <a href="painel.html" class="gov-logo-link">
                         <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
                     </a>
                     <span class="gov-divider" aria-hidden="true"></span>
@@ -186,9 +186,9 @@
                         <option value="Diretor-Geral">Diretor-Geral</option>
                         <option value="Superintendente">Superintendente</option>
                         <option value="Coordenador">Coordenador</option>
-                        <option value="Chefe de DivisÃ£o">Chefe de DivisÃ£o</option>
-                        <option value="Chefe de ServiÃ§o">Chefe de ServiÃ§o</option>
-                        <option value="Chefe de NÃºcleo">Chefe de NÃºcleo</option>
+                        <option value="Chefe de Divisão">Chefe de Divisão</option>
+                        <option value="Chefe de Serviço">Chefe de Serviço</option>
+                        <option value="Chefe de Núcleo">Chefe de Núcleo</option>
                         <option value="Agente de Classe Especial">Agente de Classe Especial</option>
                         <option value="Agente de Primeira Classe">Agente de Primeira Classe</option>
                         <option value="Agente de Segunda Classe">Agente de Segunda Classe</option>
@@ -200,15 +200,22 @@
                     <span>Grupamento</span>
                     <select id="roles-grupamento">
                         <option value="">Selecione o grupamento</option>
-                        <option value="Diretoria de GestÃ£o de Pessoas">Diretoria de GestÃ£o de Pessoas</option>
+                        <option value="Diretoria de Gestão de Pessoas">Diretoria de Gestão de Pessoas</option>
                         <option value="Diretoria Executiva">Diretoria Executiva</option>
                         <option value="Diretoria Operacional">Diretoria Operacional</option>
                         <option value="Ronda PRF">Ronda PRF</option>
                         <option value="Grupo de Patrulhamento Motorizado">Grupo de Patrulhamento Motorizado</option>
                         <option value="Universidade Corporativa da PRF">Universidade Corporativa da PRF</option>
-                        <option value="DivisÃ£o de OperaÃ§Ãµes AÃ©reas">DivisÃ£o de OperaÃ§Ãµes AÃ©reas</option>
-                        <option value="Grupo de Patrulhamento TÃ¡tico">Grupo de Patrulhamento TÃ¡tico</option>
-                        <option value="NÃºcleo de OperaÃ§Ãµes Especiais">NÃºcleo de OperaÃ§Ãµes Especiais</option>
+                        <option value="Divisão de Operações Aéreas">Divisão de Operações Aéreas</option>
+                        <option value="Grupo de Patrulhamento Tático">Grupo de Patrulhamento Tático</option>
+                        <option value="Núcleo de Operações Especiais">Núcleo de Operações Especiais</option>
+                    </select>
+                </label>
+                <label id="roles-field-acesso">
+                    <span>Acesso</span>
+                    <select id="roles-acesso">
+                        <option value="">Sem acesso especial</option>
+                        <option value="Acesso">Acesso Di&aacute;rio Oficial, Avisos e ACE</option>
                     </select>
                 </label>
                 <label id="roles-field-cursos"><span>Cursos</span><div id="roles-cursos" class="approvals-course-options"></div></label>
