--- a/interno/bou.html
+++ b/interno/bou.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="top-header-content">
                 <div class="logo-governo">
-                    <a href="../index.html" class="gov-logo-link">
+                    <a href="painel.html" class="gov-logo-link">
                         <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
                     </a>
                     <span class="gov-divider" aria-hidden="true"></span>
@@ -159,7 +159,7 @@
                             <div class="bou-card-body">
                                 <div class="bou-grid">
                                     <div>
-                                        <label for="titulo">Titulo do BOU</label>
+                                        <label for="titulo">T&iacute;tulo do BOU</label>
                                         <input id="titulo" type="text" placeholder="BOU xxx/2026 (unidade)">
                                     </div>
 
@@ -309,8 +309,8 @@
                                             <label class="bou-chip-option"><input type="checkbox" name="acoesOpcao" value="Foi conduzido mediante flagrante delito"><span>Foi conduzido mediante flagrante delito</span></label>
                                             <label class="bou-chip-option"><input type="checkbox" name="acoesOpcao" value="Foi conduzido para esclarecimento dos fatos"><span>Foi conduzido para esclarecimento dos fatos</span></label>
                                         </div>
-                                        <label for="acoesObservacoes" style="margin-top:8px;">Observacoes</label>
-                                        <textarea id="acoesObservacoes" placeholder="Texto corrido com observacoes adicionais"></textarea>
+                                        <label for="acoesObservacoes" style="margin-top:8px;">Observa&ccedil;&otilde;es</label>
+                                        <textarea id="acoesObservacoes" placeholder="Texto corrido com observa&ccedil;&otilde;es adicionais"></textarea>
                                         <textarea id="acoes" readonly style="display:none;"></textarea>
                                     </div>
                                     <div>
