--- a/interno/relatorio-aluno.html
+++ b/interno/relatorio-aluno.html
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="top-header-content">
                 <div class="logo-governo">
-                    <a href="../index.html" class="gov-logo-link">
+                    <a href="painel.html" class="gov-logo-link">
                         <img src="assets/img/gov_br.png" alt="Governo do Brasil" class="gov-logo">
                     </a>
                     <span class="gov-divider" aria-hidden="true"></span>
@@ -142,7 +142,7 @@
     <section class="latest-news info-section">
         <div class="container">
             <div class="news-header">
-                <h2>ACE - Avaliação de Capacitação e Ensino</h2>
+                <h2>ACE - Avalia&ccedil;&atilde;o de Capacita&ccedil;&atilde;o e Ensino</h2>
                 <div class="red-line-news"></div>
             </div>
 
@@ -151,12 +151,12 @@
                     <div class="bou-ait-grid bou-ait-grid--single">
                         <article class="bou-card">
                             <header class="bou-card-header">
-                                <h3>Avaliação de desempenho em treinamento</h3>
+                                <h3>Avalia&ccedil;&atilde;o de desempenho em treinamento</h3>
                             </header>
                             <div class="bou-card-body">
                                 <div class="bou-grid">
                                     <div>
-                                        <label for="aluno-avaliador">Policial responsável</label>
+                                        <label for="aluno-avaliador">Policial respons&aacute;vel</label>
                                         <input id="aluno-avaliador" type="text" readonly>
                                     </div>
                                     <div>
@@ -164,7 +164,7 @@
                                         <input id="aluno-data" type="date">
                                     </div>
                                     <div>
-                                        <label for="aluno-hora">Horário</label>
+                                        <label for="aluno-hora">Hor&aacute;rio</label>
                                         <input id="aluno-hora" type="text" inputmode="numeric" maxlength="5" placeholder="HH:MM">
                                     </div>
                                     <div>
@@ -312,3 +312,4 @@
     <script src="relatorio-aluno.js" defer></script>
 </body>
 </html>
+
